# t_app

./: .env  FILE_STRUCTURE.txt  LICENSE  README.md  Start_Here.md  package-lock.json  package.json  tailwind.config.js
Documentation/: ELECTRON_VS_TAURI.md  GETTING_STARTED.md  Index.md  QUICK_START_STEP2.md  README.md  README_STEP2.md  RUST_CHEATSHEET.md  commands.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  types.rs
src-tauri/src/commands/: auth.rs  mod.rs  settings.rs  shortcuts.rs  whispr.rs  window.rs
src-tauri/src/state/: mod.rs  settings.rs
src/components/: NewFeaturesBanner.tsx  ResponsiveDialogBox.tsx  SettingsTest.tsx  WindowsTest.tsx
src/components/settings/: AppConfigCard.tsx  Footer.tsx  Header.tsx  ModelConfigCard.tsx  PromptConfigCard.tsx  SettingsBackground.tsx  TemplateWizard.tsx
src/components/settings/data/: constants.ts
src/components/ui/: scroll-area.tsx  switch.tsx
src/lib/: notesDb.ts  tauri-api.ts  tauri-auth-api.ts  tauri-permissions-api.ts  tauri-settings-api.ts  tauri-shortcuts-api.ts  tauri-whispr-api.ts  windows-api.ts
src/lib/supabase/: client.ts
src/pages/: Authentication.tsx  Dashboard.tsx  Notes.tsx  Settings.tsx  Shortcuts.tsx  Subscription.tsx
src/types/: types.d.ts
src/utils/: preventDoubleClick.ts
