[package]
name = "whisprgpt"
version = "2.1.1"
description = "WhisprGPT - Your AI Digital Assistant"
authors = ["WhisprGPT LLC"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
env_logger = "0.11"
log = "0.4"
tauri = { version = "1.5", features = [ "system-tray",
    "shell-open",
    "window-all",
    "dialog-all",
    "fs-all",
    "path-all",
    "protocol-asset",
    "global-shortcut",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"  # For better URL parsing

[features]
# Tauri CLI assumes this exists and will do: --features custom-protocol
default = ["custom-protocol"]

# This feature name is on *your* crate; it enables the appropriate tauri feature.
custom-protocol = ["tauri/custom-protocol", "tauri/protocol-asset"]
